@@ -21,11 +21,11 @@ Usage:
 Server Options:
 EOS
     opt :from,        "URI of the source IMAP server.", :short => '-f', :type => :string
-    opt :from_folder, "Source folder to copy from", :short => '-F', :default => Config::DEFAULT['from-folder']
+    opt :from_folder, "Source folder to copy from (default: INBOX)", :short => '-F', :default => Config::DEFAULT['from-folder'], :type => :string
     opt :from_pass,   "Source server password (default: prompt)", :short => '-p', :type => :string
     opt :from_user,   "Source server username (default: prompt)", :short => '-u', :type => :string
     opt :to,          "URI of the destination IMAP server.", :short => '-t', :type => :string
-    opt :to_folder,   "Destination folder to copy to", :short => '-T', :default => Config::DEFAULT['to-folder']
+    opt :to_folder,   "Destination folder to copy to (default: INBOX)", :short => '-T', :default => Config::DEFAULT['to-folder'], :type => :string
     opt :to_pass,     "Destination server password (default: prompt)", :short => '-P', :type => :string
     opt :to_user,     "Destination server username (default: prompt)", :short => '-U', :type => :string
 
@@ -46,16 +46,13 @@ EOS
     opt :verbosity,        "Output verbosity: debug, info, warn, error, or fatal", :short => '-V', :default => Config::DEFAULT['verbosity']
   end
 
-  # Load config.
-  config = Config.new(ARGV.shift || 'default', options[:config], options)
-  
   if options[:config_given]
     Trollop.die :config, ": file not found: #{options[:config]}" unless File.exist?(options[:config])
   end
 
-  # Validate config.
+  # Load config.
   begin
-    config.validate
+    config = Config.new(ARGV.shift || 'default', options[:config], options)
   rescue Config::Error => e
     abort "Config error: #{e}"
   end
@@ -65,13 +62,12 @@ EOS
   uri_to   = URI(config.to)
 
   # Use --from-folder and --to-folder unless folders were specified in the URIs.
-  uri_from.path = uri_from.path.empty? ? '/' + CGI.escape(config.from_folder.gsub(/^\//, '')) : uri_from.path
-  uri_to.path   = uri_to.path.empty?   ? '/' + CGI.escape(config.to_folder.gsub(/^\//, ''))   : uri_to.path
+  uri_from.path = uri_from.path.empty? ? '/' + CGI.escape(config.from_folder.gsub(/^\//, '')) : uri_from.path if config.from_folder
+  uri_to.path   = uri_to.path.empty?   ? '/' + CGI.escape(config.to_folder.gsub(/^\//, ''))   : uri_to.path if config.to_folder
 
   # --all and --all-subscribed options override folders
   if config.all || config.all_subscribed
     uri_from.path = ''
-    uri_to.path   = ''
   end
 
   # Usernames and passwords specified as arguments override those in the URIs
