@@ -17,6 +17,9 @@ Version 1.1.0 (git)
     mailboxes.
   * Added short versions of common command-line options.
   * The --fast-scan option has been removed.
+  * The --to-folder option can now be used in conjunction with --all or
+    --all-subscribed to copy messages from multiple source folders to a single
+    destination folder.
   * Fixed encoding issues when creating mailboxes and getting mailbox lists.
   * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.
   * Fixed a bug in which Larch would try to copy flags that weren't supported on
